CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(amano)

ADD_DEFINITIONS(
)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
        "${PROJECT_SOURCE_DIR}/cmake_modules/")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# make release version
SET(CMAKE_BUILD_TYPE RelWithDebInfo)
SET(CMAKE_VERBOSE_MAKEFILE yes)
SET(CMAKE_CXX_FLAGS "-g -O3 -msse3 -DNDEBUG")

ENABLE_TESTING()

if (APPLE)
    ADD_DEFINITIONS(-DAPPLE)
endif (APPLE)

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${SRC_DIR})
INCLUDE_DIRECTORIES(.)

ADD_EXECUTABLE(${PROJECT_NAME} main.cc lib/calib.h lib/warp.h lib/utility.h lib/slider.h lib/argparse.hpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} pthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} stdc++fs)

